[package]
name = "usemods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.13", features = ["derive"] }
rand = "0.8.4"
clap = { version = "4.0.29", features = ["derive"] }
stager = {path = "../stager"}
staging = {path = "../staging"}
storage_hiding = {path = "../storage_hiding"}


